--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,11 @@
     <string name="title_friends">Friends</string>
     <string name="title_home">Home</string>
 
+    <string name = "main_activity_button_gallery">Gallery</string>
+    <string name="main_activity_button_camera">Camera</string>
+    <string name="data_color_button_send_result">Send result to Server</string>
+    <string name="main_activity_information">SD card not available</string>
+
     <!-- data in fragment_data_color-->
 
     <string name="title_fragment_data_color">Data about average: Color</string>
