added method save data and image to db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="main_activity_information">SD card not available</string>
     <string name="name_of_item_fragment_name_copmosition">Input name of item</string>
     <string name="name_of_item">Name of item</string>
+    <string name="button_information_available_sd">Ok</string>
 
     <!-- data in fragment_data_color-->
 
