--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,8 @@
     <string name="checbox__title_seve_to_sql">Save name of server</string>
     <string name="send_to_sql_button">Sing in</string>
     <string name="heade_layout_title">Title items were renamed in SQL</string>
-    <string name="response_sql_fragment_information_about_task">All data was sent successfully</string>
+    <string name="send_data_to_server_fragment_information_about_task">All data was sent successfully</string>
+    <string name="send_data_to_server_fragment_information_about_found_sql"> SQL Server not found or does not respond</string>
 
     <!-- data in fragment_data_color-->
 
