fixed some bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
 
     <string name="title_fragment_data_color">Data about average: Color</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-1349762371687121/2707806096</string>
+
 <!--
  TODO: Remove or change this placeholder text
     <string name="hello_blank_fragment">Hello blank fragment</string>
